# level-4

./: .env.example  .gitignore  DEMO_SCRIPT.md  DEPLOYMENT_GUIDE.md  LICENSE  LOCAL_SETUP.md  MONITORING_SETUP.md  README.md  SUBMISSION.md  SUBMISSION_CHECKLIST.md  TESTING_GUIDE.md  USER_METRICS.csv  USER_ONBOARDING_GUIDE.md  USER_PROOF.csv  package-lock.json  railway.json  render.yaml
.github/workflows/: ci-cd.yml
backend/: .env.example  package-lock.json  package.json
backend/src/: index.ts
backend/src/config/: database.ts  env.ts  stellar.ts
backend/src/controllers/: analyticsController.ts  authController.ts  usageController.ts  userController.ts
backend/src/middleware/: auth.ts  errorHandler.ts  logging.ts
backend/src/models/: Dispute.ts  Transaction.ts  Usage.ts  User.ts
backend/src/routes/: analytics.ts  auth.ts  usage.ts  user.ts
backend/src/services/: aiService.ts  meteringService.ts  reconciliationService.ts  sorobanService.ts
backend/src/utils/: formatters.ts  logger.ts  setup-sentry.ts  validators.ts
contract/: Cargo.toml
contract/src/: lib.rs  test.rs
docs/: assessment_objection.md  user_feedback_summary.md  wallet_interactions_proof.md
frontend/: index.html  package-lock.json  package.json
frontend/scripts/: capture-screenshots.cjs
frontend/src/: App.tsx
frontend/src/components/: AnalyticsDashboard.tsx  AutoTopupSettings.tsx  Badge.tsx  BalanceCard.tsx  Button.tsx  Card.tsx  (+12 more)
scripts/: deploy-contract.ts  dev-all.sh  setup-analytics.ts  setup-local.sh  setup-sentry.ts  take-screenshots.ps1  track-users.ts  verify-contract.sh
(+13 files in other folders)
